fixed alignment of nav

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,7 @@
 body {
     background-color: #fbfbf8;
     font-family: "Lato", sans-serif;
+    height: 100%;
 }
 
 .site-header {
